--- a/src/Akeneo/Connectivity/Connection/back/Infrastructure/Symfony/Resources/config/event_subscribers.yml
+++ b/src/Akeneo/Connectivity/Connection/back/Infrastructure/Symfony/Resources/config/event_subscribers.yml
@@ -23,6 +23,6 @@ services:
             - '@akeneo_connectivity.connection.webhook.get_delay_until_next_request'
             - '%webhook_requests_limit%'
             - '@akeneo_connectivity.connection.webhook.sleep'
-            - '@monolog.logger.event_api'
+            - '@akeneo_connectivity.connection.webhook.event_subscription_log'
         tags:
             - { name: kernel.event_subscriber }
